--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -1,4 +1,7 @@
 .topbar {
+    position: sticky;
+    top: 0;
+    z-index: 1000;
     padding: 0.8rem 4rem;
     background-color: var(--light-color);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -89,4 +92,18 @@
     width: 15px;
     height: 15px;
     font-size: 10px;
+}
+
+@media (max-width: 768px) {
+    .topbar {
+        padding: 0.8rem 1rem;
+    }
+
+    .logo {
+        font-size: 0.8rem;
+    }
+
+    .search-bar {
+        display: none;
+    }
 }
