--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,14 @@ body {
     line-height: 1.6;
 }
 
+main {
+    display: flex;
+    gap: 2rem;
+    margin-right: 4rem;
+    margin-top: auto;
+    /* height: 80vh; */
+}
+
 aside{
   padding: 1rem;
 }
@@ -67,7 +75,7 @@ a:hover {
     flex: 1;
     height: 100%;
     border-radius: 10px;
-    height: 80vh;
+    /* height: 80vh; */
 }
 
 .content {
@@ -76,7 +84,20 @@ a:hover {
     margin-bottom: 1rem;
     flex: 1;
     gap: 1rem;
-    overflow-y: auto;
+    /* overflow-y: auto; */
     scrollbar-width: none;
     border: 1px solid var(--gray-lighter-color);
+}
+
+@media (max-width: 768px) {
+    main {
+        margin-right: 0;
+    }
+    .container > h1 {
+        font-size: 1.2rem;
+        padding: 1rem 1rem 0;
+    }
+    .content {
+        flex-direction: column;
+    }
 }
