--- a/src/routes/login/login.css
+++ b/src/routes/login/login.css
@@ -109,6 +109,7 @@ label[for="stay_signed_in"] {
 }
 
 .login-image {
+    border-radius: 14px;
     flex: 1;
     padding: 2rem;
 }
